[tool.poetry]
name = "Pyvalve"
version = "0.1.0"
description = "Asyncio python clamd client"
authors = ["Bradley Sacks <bradsacks99@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
aiopath = "^0.5.12"
asyncinit = "^0.2.4"
aiofile = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-pylint = "^0.18.0"
pytest-mypy = "^0.9.1"
scriv = {extras = ["toml"], version = "^0.16.0"}
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
